cmake_minimum_required (VERSION 2.8)

project (OnlineLibrary)
set(LIB_NAME "CJsonTool" "pthread" "hiredis" "mysqlclient")
set (VERSION_MAJOR 1)
set (VERSION_MINOR 0)
option(OPEN_DEBUG_MSG "Show Debug msg" ON)
if(${OPEN_DEBUG_MSG} STREQUAL "ON")
  add_compile_options(-DDEBUG)
  message("OPEN_DEBUG_MSG is ON")
endif()
add_compile_options(-std=c++11)
link_directories(/usr/lib64/mysql/)
add_subdirectory(CJsonObject)
add_subdirectory(demo)
add_executable(ser src/server.cc)
add_executable(cli src/client.cc)
add_executable(redo src/Server.cc)
add_executable(CreateJson src/make_test_json_file.cc)
target_link_libraries(ser ${LIB_NAME})
target_link_libraries(cli ${LIB_NAME})
target_link_libraries(redo ${LIB_NAME})
target_link_libraries(CreateJson ${LIB_NAME})
